# dbt-practice

./: .gitignore  Makefile  README.md  docker-compose.yml
app/: pyproject.toml
application/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
application/seeds/: todos.csv  users.csv
application/tests/: user_name_is_not_null.sql  user_name_is_not_null.yml
containers/postgres/: init.sql
containers/python/: Dockerfile
